--- a/anhang.tex
+++ b/anhang.tex
@@ -1,3 +1,84 @@
+\chapter{Quelltexte}
+
+\section{VHDL-Quelltexte}\label{anhang:source:vhdl}
+
+\begin{code}
+    \begin{minted}[fontsize=\small]{vhdl}
+LIBRARY ieee;
+USE ieee.std_logic_1164.all;
+USE ieee.std_logic_arith.all;
+
+ENTITY ff2 IS
+    PORT (
+        clk : IN    std_logic;
+        d0  : IN    std_logic;
+        d1  : IN    std_logic;
+        res : IN    std_logic;
+        q0  : OUT   std_logic;
+        q1  : OUT   std_logic
+    );
+END ff2 ;
+
+ARCHITECTURE beh OF ff2 IS
+    SIGNAL q0_s, q1_s : std_logic;
+BEGIN
+    
+    reg: PROCESS (clk, res)
+    BEGIN
+        IF res = '1' THEN
+            q0_s <= '0';
+            q1_s <= '0';
+        ELSIF clk'event AND clk = '1' THEN
+            q0_s <= d0;
+            q1_s <= d1;
+        END IF;
+    END PROCESS reg;
+
+    q0 <= q0_s AFTER 2 ns;
+    q1 <= q1_s AFTER 2 ns;
+
+END beh;
+    \end{minted}
+    \caption{VHDL-Quelltext eines 2-Bit-Flipflops \cite[siehe][39]{kesel2013}}
+\end{code}
+
+\begin{code}
+    \begin{minted}[fontsize=\small]{vhdl}
+LIBRARY ieee;
+USE ieee.std_logic_1164.all;
+USE ieee.std_logic_arith.all;
+
+ENTITY mux2 IS
+    PORT (
+        a1  : IN    std_logic;
+        a2  : IN    std_logic;
+        b1  : IN    std_logic;
+        b2  : IN    std_logic;
+        sel : IN    std_logic;
+        o1  : OUT   std_logic;
+        o2  : OUT   std_logic
+    );
+END mux2 ;
+
+ARCHITECTURE beh OF mux2 IS
+BEGIN
+
+    mux: PROCESS (a1, a2, b1, b2, sel)
+    BEGIN
+        IF sel = '1' THEN
+            o1 <= a1 after 3 ns;
+            o2 <= a2 after 3 ns;
+        ELSE
+            o1 <= b1 after 4 ns;
+            o2 <= b2 after 4 ns;
+        END IF;
+    END PROCESS mux;
+
+END beh;
+    \end{minted}
+    \caption{VHDL-Quelltext eines 2-Bit-Multiplexers \cite[siehe][39--40]{kesel2013}}
+\end{code}
+
 \chapter{Fehlerberichte und Korrekturen}
 \label{anhang:fehler}
 
