Expand HLS section

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -34,6 +34,26 @@
     note = {Online; \url{https://github.com/triSYCL/sycl}, zuletzt abgerufen am 19. August 2019}
 }
 
+@inproceedings{liao1997,
+    author = {Liao, Stan and Tjiang, Steve and Gupta, Rajesh},
+    title = {An Efficient Implementation of Reactivity for Modeling Hardware in the Scenic Design Environment},
+    booktitle = {Proceedings of the \nth{34} annual Design Automation Conference},
+    year = 1997,
+    month = jun,
+    pages = {70--75},
+    doi = {10.1145/266021.266037}
+}
+
+@article{eweekly1999,
+    author = {{Electronics Weekly}},
+    title = {STM, Synopsys in 3-year R\&D deal},
+    journal = {Electronics Weekly},
+    year = 1999,
+    month = dec,
+    note = {Online; \url{https://www.electronicsweekly.com/news/archived/resources-archived/stm-synopsys-in-3-year-rampd-deal-1999-12/},
+            zuletzt abgerufen am 15. September 2019}
+}
+
 @inproceedings{howes2006,
     author = {Howes, Lee W. and Price, Paul and Mencer, Oskar and Beckmann, Olav and Pell, Oliver},
     title = {Comparing FPGAs to Graphics Accelerators and the Playstation 2 Using a Unified Source Description},
